# HomeNetMon

./: .env.example  .env.prod  .env.prod.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MAC_MIGRATION_NOTES.md  Notes.txt  POSTGRESQL_MIGRATION.md  README.md  RELEASE_MANAGEMENT.md  SSL_TLS_SETUP.md  TestHomeNetmon.js  api_documentation.py  app.py  app_context_fix.py  apply_rate_limiting.py  auth_security_report.json  backend_performance_optimizer.py  backend_performance_report.json  backend_performance_tester.py  backup_database.py  billing_system.py  build_assets.py  button_functionality_report.json  capture_web_screenshots.py  check_rate_limits.py  clear_device_cache.py  cloud_config.py  comprehensive_auth_audit.py  comprehensive_button_functionality_test.py  comprehensive_database_health_assessment.py  comprehensive_functional_test_report.json  comprehensive_functional_test_suite.py  comprehensive_load_stress_test_suite.py  comprehensive_static_code_analysis.py  comprehensive_ui_ux_audit.py  (+86 more)
.claude/: settings.local.json
api/: analytics.py  anomaly.py  automation.py  config.py  config_management.py  device_control.py  devices.py  devices_optimized.py  escalation.py  health.py  health_check.py  maintenance.py  mobile.py  monitoring.py  notifications.py  performance.py  performance_api.py  performance_dashboard.py  performance_optimization.py  rate_limit_admin.py  rate_limited_endpoints.py  rate_limiting.py  remote.py  saas_admin.py  security.py  security_api.py  speedtest.py  system.py  usage_analytics_api.py
core/: api_documentation.py  application.py  auth.py  blueprint_registry.py  cache_layer.py  config_validation.py  database_pool.py  db_config.py  db_optimizer.py  error_handler.py  health.py  performance_middleware.py  quality_manager.py  query_profiler.py  rate_limiter.py  response_cache.py  secure_executor.py  security_middleware.py  service_manager.py  structured_logging.py  testing_framework.py  thread_manager.py  validation_middleware.py  validators.py  websocket_manager.py  websocket_memory_manager.py  websocket_optimizer.py
docker/: Dockerfile.cloud  Dockerfile.prod  nginx.conf  start-cloud.sh  supervisord.conf
docs/: ADMINISTRATION_GUIDE.md  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  INTERACTIVE_CHARTS.md  OPERATIONS_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_2_AUDIT_REPORT.md  POSTGRESQL_MIGRATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_IMPROVEMENTS.md  QUICK_START.md  README.md  RELEASE_MANAGEMENT.md  RESTORE.md  SCREENSHOT_GUIDE.md  SECURITY_GUIDE.md  SSL_TLS_SETUP.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  USER_MANAGEMENT_GUIDE.md
examples/: react-native-example.js  web-app-example.html
middleware/: usage_tracking.py
migrations/: add_performance_indexes.py
monitoring/: alerts.py  bandwidth_monitor.py  iot_device_optimizer.py  monitor.py  scanner.py  scanner_fixed.py
performance/: cache_manager.py  circuit_breaker.py  load_balancing.py  metrics_collector.py  performance_dashboard.py
playwright-report/: index.html
routes/: analytics.py
scripts/: backup_database.py  backup_production.py  deploy_production.py
sdk/: homenetmon-sdk.d.ts  homenetmon-sdk.js
security/: configure-firewall.sh  configure-iptables.sh  generate-dhparam.sh  password-policy.md  security-headers.conf  security-monitor.py  session-config.py  ssl-config.conf  vulnerability-scanner.py
services/: alert_auto_resolver.py  alert_correlation.py  alert_priority.py  alert_retention_policy.py  anomaly_detection.py  cdn_manager.py  compliance_reporting.py  configuration_service.py  device_analytics.py  device_control.py  device_learning.py  device_metrics_service.py  escalation_service.py  http_optimizer.py  integration_manager.py  memory_monitor.py  multi_site_manager.py  network_security_monitor.py  network_topology.py  pagination.py  performance_analyzer.py  performance_cache.py  performance_monitor.py  predictive_failure.py  push_notifications.py  query_cache.py  query_optimizer.py  rate_limiter.py  read_receipt_service.py  resource_monitor.py  resource_optimizer.py  rule_engine.py  security_response.py  security_scanner.py  speedtest.py  thread_pool_manager.py  ultra_cache.py  unified_cache.py  websocket_optimizer.py  websocket_performance_optimizer.py  (+2 more)
static/: manifest.json  service-worker.js  test.html
systemd/: homenetmon.service
templates/: about.html  ai_dashboard.html  alerts.html  analytics.html  analytics.html.backup  base.html  base_beautiful.html  base_clean.html  base_with_quickstats.html  dashboard.html  dashboard.html.simple  (+17 more)
(+151 files in other folders)
